k8s/22-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: chatroom
  labels:
    app.kubernetes.io/name: chatroom
    app.kubernetes.io/component: mysql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chatroom
    app.kubernetes.io/component: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
