k8s/50-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatroom-server
  namespace: chatroom
  labels:
    app: chatroom-server
spec:
  type: NodePort
  selector:
    app: chatroom-server
  ports:
    - name: http
      port: 80
      targetPort: http
      # The Jenkins host's nginx proxies to 192.168.0.104:30800. Pick a
      # fixed NodePort in the default 30000-32767 range so the nginx
      # config never has to change.
      nodePort: 30800
      protocol: TCP
